@@ -49,6 +49,9 @@ Optimizations
 * LUCENE-6754: Optimized IndexSearcher.count for the cases when it can use
   index statistics instead of collecting all matches. (Adrien Grand)
 
+* LUCENE-6773: Nested conjunctions now iterate over documents as if clauses
+  were all at the same level. (Adrien Grand)
+
 Bug Fixes
 
 * LUCENE-6730: Hyper-parameter c is ignored in term frequency NormalizationH1.
